# ProjetoPG

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
cmake/: DownloadProjectOptions.cmake  ExtraCmakeModules.cmake  FormatCode.cmake  Packages.cmake  Tests.cmake  ThirdParty.cmake
resources/: .clangd
src/: CMakeLists.txt  main.cpp
src/image/: image.cpp  image.h
src/objects/: object.cpp  object.h  sphere.cpp  sphere.h
src/renderer/: camera.cpp  camera.h  hit_payload.cpp  hit_payload.h  ray.cpp  ray.h
tests/: CMakeLists.txt  calculator_test.cpp
